[gd_scene load_steps=10 format=3 uid="uid://biw4ue46eoaas"]

[ext_resource type="Script" path="res://Scenes/shield.gd" id="1_8xmpv"]
[ext_resource type="Texture2D" uid="uid://bxs7ewqjg2d65" path="res://Sprites/Shield-Sheet.png" id="2_24jcj"]
[ext_resource type="Texture2D" uid="uid://bmgppf3llf8i" path="res://Sprites/purpleParticle.png" id="3_oe45p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ut4"]
atlas = ExtResource("2_24jcj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vtvw"]
atlas = ExtResource("2_24jcj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw0uu"]
atlas = ExtResource("2_24jcj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mhlud"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ut4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vtvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw0uu")
}],
"loop": true,
"name": &"moving",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q713v"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 10.0
scale_max = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yv7j5"]
radius = 8.0

[node name="Shield" type="Node2D"]
position = Vector2(8, 3)
scale = Vector2(0.7, 0.7)
script = ExtResource("1_8xmpv")

[node name="Immunity" type="Timer" parent="."]
one_shot = true

[node name="CoolDown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_mhlud")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.366947

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_q713v")
texture = ExtResource("3_oe45p")
lifetime = 0.2
one_shot = true
explosiveness = 0.75

[node name="ShieldArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldArea"]
shape = SubResource("CircleShape2D_yv7j5")

[connection signal="timeout" from="Immunity" to="." method="_on_immunity_timeout"]
[connection signal="timeout" from="CoolDown" to="." method="_on_cool_down_timeout"]
[connection signal="body_entered" from="ShieldArea" to="." method="_on_shield_area_body_entered"]
